Modificaciones en tarea subordinada, en los metodos crud

--- a/templates/base.html
+++ b/templates/base.html
@@ -244,14 +244,14 @@
                     <li class="nav-item">
                       <a href="{% url 'workflowlist' %}"
                         class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Listar</p>
                       </a>
                     </li>
                     <li class="nav-item">
                       <a href="{% url 'workflownew' %}"
                         class="nav-link {% if datos.menu == 'workflownew' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Crear</p>
                       </a>
                     </li>
@@ -267,14 +267,14 @@
                     <li class="nav-item">
                       <a href="{% url 'listusers' %}"
                         class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Listar</p>
                       </a>
                     </li>
                     <li class="nav-item">
                       <a href="{% url 'newuser' %}"
                         class="nav-link {% if datos.menu == 'newuser' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Crear</p>
                       </a>
                     </li>
@@ -290,14 +290,14 @@
                     <li class="nav-item">
                       <a href="{% url 'listunits' %}"
                         class="nav-link {% if datos.menu == 'listunits' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Listar</p>
                       </a>
                     </li>
                     <li class="nav-item">
                       <a href="{% url 'newunits' %}"
                         class="nav-link {% if datos.menu == 'newunits' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Crear</p>
                       </a>
                     </li>
@@ -313,14 +313,14 @@
                     <li class="nav-item">
                       <a href="{% url 'listrole' %}"
                         class="nav-link {% if datos.menu == 'listrole' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Listar</p>
                       </a>
                     </li>
                     <li class="nav-item">
                       <a href="{% url 'newrole' %}"
                         class="nav-link {% if datos.menu == 'newrole' %} active {% endif %}">
-                        <i class="far fa-dot-circle nav-icon"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>Crear</p>
                       </a>
                     </li>
