--- a/templates/teamwork/teamwork.html
+++ b/templates/teamwork/teamwork.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %} 
+{% block content %}
 
 <div class="wrapper">
   <!-- Content Wrapper. Contains page content -->
@@ -34,7 +34,8 @@
       <div class="container-fluid">
         <div class="card">
           <div class="car-body">
-            <table id="teams" class="table table-hover" style="width: 100%">
+            <table id="datateam" class="table table-hover" data-mdb-clickable-rows="true" data-mdb-selectable="true"
+              data-mdb-multi="true" style="color:#878781">
               <thead>
                 <tr>
                   <th>Nombre</th>
@@ -47,10 +48,10 @@
               </thead>
               <tbody>
                 {% for teams in datos.teams %}
-                <tr data-href="{% url 'workload' %}" target="_blank" >
+                <tr>
                   <td>{{teams.nombreUsuario}}</td>
                   <td>
-                    {{teams.apellidoUsuario}} 
+                    {{teams.apellidoUsuario}}
                     {% if teams.segundoApellido %}{{teams.segundoApellido}}{% endif %}
                   </td>
                   <td>{{teams.rutUsuario}}</td>
@@ -58,6 +59,26 @@
                   <td>{{teams.correoElectronico}}</td>
                   <td>{{teams.idRolUsuario}}</td>
                 </tr>
+                <!-- Modal -->
+                <div class="modal fade" tabindex="-1" aria-hidden="true" id="modal-clickable-rows">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="modal-header-clickable-rows"></h5>
+                        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body mt-4 mb-5" id="modal-body-clickable-rows"></div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-primary">
+                          Reply<i class="fa fa-paper-plane ms-2"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-primary">
+                          Forward<i class="fa fa-arrow-right ms-2"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 {% endfor %}
               </tbody>
               <tfoot>
@@ -83,17 +104,22 @@
 </div>
 {% endblock %}
 
-<script type="text/javascript" language="javascript" class="init">
-  $(document).ready(function () {
-    $("#teams").DataTable({
-      scrollY: "50vh",
-      scrollCollapse: true,
-      paging: false,
-    });
-  });
+    {% block script %}
+    <script type="text/javascript" language="javascript" class="init">
+        $(document).ready(function () {
+            var table = $('#datateam').DataTable({
+                scrollY: "50vh",
+                scrollCollapse: true,
+                paging: false,
+            });
+            $('#datateam').on('click', 'tbody tr', function () {
+                var data = table.row( this ).data();
+                var uri = "{% url 'workload' 123 %}"
+                window.location.href = uri.replace('123',data[2]);
+            });
+            $('tr').css('cursor', 'pointer');
+        });
+    </script>
 
-$('#teams').on('click', 'tbody tr', function() {
-  window.location.href = `{% url 'workload' %}`;
-});
-$('tr').css('cursor','pointer');
-</script>
+
+    {% endblock script %}
