--- a/templates/users/userlist.html
+++ b/templates/users/userlist.html
@@ -35,22 +35,23 @@
                                             <div class="card-header">
                                                 <h3 class="card-title">Mantenedor Usuarios</h3>
 
-                                                <div class="card-tools">
+                                                {% comment %} <div class="card-tools">
                                                     <div class="input-group input-group-sm" style="width: 150px;">
                                                         <input type="text" name="table_search"
                                                             class="form-control float-right" placeholder="Search">
-
                                                         <div class="input-group-append">
                                                             <button type="submit" class="btn btn-default">
                                                                 <i class="fas fa-search"></i>
                                                             </button>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div> {% endcomment %}
                                             </div>
                                             <!-- /.card-header -->
-                                            <div class="card-body p-0">
-                                                <table class="table table-hover">
+                                            <div class="card-body">
+                                                <table id="datausers" class="table table-hover"
+                                                    data-mdb-clickable-rows="true" data-mdb-selectable="true"
+                                                    data-mdb-multi="true" style="color:#878781;">
                                                     <thead>
                                                         <tr>
                                                             <th>Nombre</th>
@@ -63,35 +64,37 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody>
-                                                    {% for user in datos.usuarios %}
+                                                        {% for user in datos.usuarios %}
 
                                                         <tr>
-                                                            <td class="text-start">{{user.nombreUsuario}}</td>
-                                                            <td class="text-start">{{user.apellidoUsuario}} {{user.segundoApellido}}</td>
-                                                            <td class="text-start">{{user.rutUsuario}}</td>
-                                                            <td class="text-start">{{user.idUnidadInternaUsuario}}</td>
-                                                            <td class="text-start">{{user.correoElectronico}}</td>
-                                                            <td class="text-start">{{user.idRolUsuario}}</td>
-                                                            <td class="text-start">
-                                                                <a class="btn btn-primary btn-sm" href="{% url 'viewusers' id=user.rutUsuario %}">
+                                                            <td>{{user.nombreUsuario}}</td>
+                                                            <td>{{user.apellidoUsuario}}
+                                                                {{user.segundoApellido}}</td>
+                                                            <td>{{user.rutUsuario}}</td>
+                                                            <td>{{user.idUnidadInternaUsuario}}
+                                                            </td>
+                                                            <td>{{user.correoElectronico}}</td>
+                                                            <td>{{user.idRolUsuario}}</td>
+                                                            <td>
+                                                                <a class="btn btn-primary btn-sm"
+                                                                    href="{% url 'viewusers' user.rutUsuario %}">
                                                                     <i class="fas fa-folder">
                                                                     </i>
-                                                                    View
+                                                                    Ver
                                                                 </a>
-                                                                <a class="btn btn-info btn-sm" href="{% url 'editusers' id=user.rutUsuario %}">
+                                                                <a class="btn btn-info btn-sm"
+                                                                    href="{% url 'editusers' user.rutUsuario %}">
                                                                     <i class="fas fa-pencil-alt">
                                                                     </i>
-                                                                    Edit
                                                                 </a>
-                                                                <a class="btn btn-danger btn-sm" href="#"onclick="confirmOption('{{user.nombreUsuario}}', '/dashboard/deleteusers/{{user.rutUsuario}}')">
+                                                                <a class="btn btn-danger btn-sm" href="#"
+                                                                    onclick="confirmOption('{{user.nombreUsuario}}', '/dashboard/deleteusers/{{user.rutUsuario}}')">
                                                                     <i class="fas fa-trash">
                                                                     </i>
-                                                                    Delete
                                                                 </a>
-
                                                             </td>
                                                         </tr>
-                                                    {% endfor %}
+                                                        {% endfor %}
 
                                                     </tbody>
                                                     <tfoot>
@@ -132,11 +135,25 @@
         </section>
     </div>
 </div>
-<script>
-  function confirmOption(opcion, direccion){
-    if(confirm("Esta seguro que desea Eliminar el registro "+ opcion)){
-      window.location.href = direccion;
-    }
-  }
-</script>
+
 {% endblock content %}
+
+{% block script %}
+<script type="text/javascript" language="javascript" class="init">
+    $(document).ready(function () {
+        var table = $('#datausers').DataTable({
+            scrollY: "50vh",
+            scrollCollapse: true,
+            paging: false,
+        });
+    });
+
+    function confirmOption(opcion, direccion) {
+        if (confirm("Esta seguro que desea Eliminar el registro " + opcion)) {
+            window.location.href = direccion;
+        }
+    }
+</script>
+
+
+{% endblock script %}
